--- a/style.css
+++ b/style.css
@@ -1,154 +1,76 @@
-/* navbar */
-.logo {
-    font-size: 30px;
-    font-weight: 600;
-    margin: 0 0;
-    padding: 0 0;
-    align-self: center;
+body {
+  margin: 0;
+  padding: 0 140px;
+  font-family: Arial;
+}
+
+/* --------------------------- */
+nav {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  height: 100px;
+}
+
+#logo {
+  margin: 0;
+  padding: 30px;
+  color: #404040;
 }
 
 nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0 0;
-    padding: 0 0;
+  margin: 0;
+  padding: 30px 0;
+  width: 420px;
+  text-align: end;
 }
 
-nav li{
-    font-size: 17px;
-    padding-top: 7px;
-    color: #404040;
+nav li {
+  display: inline-block;
+  margin: 0px 10px;
 }
 
 nav a {
-    color: black;
-    text-decoration: none;
+  text-decoration: none;
+  color: #404040;
 }
 
 a:hover {
-    color: #41878B;
+  color: #96cec6;
+  transition-duration: 0.2s;
+}
+/* --------------------------- */
+
+section div {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 40px;
+  /* height: 1103px; */
+  background-color: aliceblue;
 }
 
-
-
-
-/* section 1*/
-
-
-
-/* left */
-section {
-    background-color: #DBF6ED;
-    color: #404040;
+.product-card h1,
+p {
+  grid-column: 1 / 5;
 }
 
-section p {
-    font-size: 20px;
-    font-weight: 300;
+.product-card h1 {
+  font-size: 40px;
+  color: #404040;
 }
 
-section h1 {
-    font-weight: bold;
+.product-card p {
+  font-size: 24px;
+  font-weight: 300;
+  color: #404040;
 }
 
-
-.container-left {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#information {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.container-left > div {
-
-    margin: 0 0;
-    padding: 20px 0;
+#information a {
+  color: #7296fd;
+  text-decoration: none;
 }
-
-
-.container-left a{
-    color: #7296FD;
-    text-decoration: none;
-}
-
-.container-left a:hover {
-    color: #41878B;
-}
-
-
-
-
-
-
-
-
-
-/* right */
-.container-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
-
-.container-right > div {
-    background-color: #96CEC6;
-    height: 563px;
-    border-radius: 20px;
-    
-
-}
-
-.container-right p{
-    font-weight: bold;
-    padding: 30px 70px;
-    margin: 0 0;
-}
-
-.container-right form{
-    font-size: 20px;
-    font-weight: bold;
-    display: flex;
-    flex-direction: column;
-    padding: 0px 70px;
-    margin: 0 0;
-}
-
-.container-right input{
-    border-radius: 10px;
-    border: 0px;
-  
-}
-
-.container-right button{
-    border-radius: 10px;
-    border: 0px;
-    background-color: #276773;
-    width: 50%;
-    height: 50px;
-    font-size: 15px;
-    color: #F7FEF9;
-    font-weight: bold;
-    transition-duration: 0.4s;
-}
-
-.container-right button:hover {
-    background-color: white;
-    color: #276773;
-}
-
-
-/* mid */
-
-.container-mid {
-    display: flex;
-    flex-direction: row;
-    padding: 20px 0px;
-    justify-content: space-between;
-
-    
-}
-
-
