--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 0 140px;
+  padding: 0 0px;
   font-family: Arial;
 }
 
@@ -9,7 +9,8 @@ nav {
   display: flex;
   justify-content: space-between;
   flex: 1;
-  height: 100px;
+  height: 80px;
+  padding: 0 140px;
 }
 
 #logo {
@@ -27,7 +28,7 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin: 0px 10px;
+  margin-left: 20px;
 }
 
 nav a {
@@ -41,36 +42,59 @@ a:hover {
 }
 /* --------------------------- */
 
-section div {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 40px;
-  /* height: 1103px; */
-  background-color: aliceblue;
+section {
+  padding: 0 140px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  height: auto;
+  background-color: #dbf6ed;
 }
 
-.product-card h1,
-p {
-  grid-column: 1 / 5;
+.box-main {
+  flex-direction: column;
+  flex: 1 1 600px;
+  height: auto;
+  margin-right: 70px;
 }
 
-.product-card h1 {
+.box-main h1 {
   font-size: 40px;
   color: #404040;
 }
 
-.product-card p {
+.box-main p {
   font-size: 24px;
   font-weight: 300;
   color: #404040;
+  margin: 50px 0px;
 }
 
-#information {
+#button-information {
   font-size: 24px;
   font-weight: bold;
 }
 
-#information a {
+#button-information a {
   color: #7296fd;
   text-decoration: none;
+}
+
+/* --------------------------- */
+
+.box-imc {
+  border-radius: 20px;
+  flex: 1 1 600px;
+  height: auto;
+  background-color: #96cec6;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.box-imc h2 {
+  color: #404040;
+  font-size: 28px;
+  margin: 40px 60px;
 }
