--- a/css/introducao-agua.css
+++ b/css/introducao-agua.css
@@ -1,58 +1,51 @@
-article {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  max-width: 1000px;
-  margin: 0 auto;
-  gap: 20px;
-}
-
-.introducao {
+.introducao-agua {
   grid-column: 1;
   padding: 10px 20px;
 }
 
-.introducao h1 {
+.introducao-agua h1 {
   font-size: 30px;
   padding: 30px 0px;
   line-height: 1.3;
 }
 
-.introducao p {
+.introducao-agua p {
   padding: 20px 0px;
   line-height: 1.3;
 }
 
-.introducao a {
+.introducao-agua a {
   color: #effdf5;
-  background-color: #276773;
+  background-color: #446ffc;
   padding: 15px;
   border-radius: 10px;
 }
 
-.introducao a:hover {
+.introducao-agua:hover {
   background-color: #f7fef9;
   color: #404040;
   transition: 0.3s;
 }
 
-.introducao-2 {
-  grid-column: span 2;
+.box-agua {
+  background-color: #d9e5fe;
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 1px 1px 1px 1px #96cec6;
+  object-fit: cover;
+}
+
+.introducao-agua-2 {
+  grid-column: 2;
   display: flex;
   padding: 10px 20px;
   gap: 50px;
 }
 
-.box-imc {
-  background-color: #e5faf1;
-  border-radius: 10px;
-  height: 360px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 1px 1px 1px 1px #96cec6;
-}
-
-.calculadora-imc {
+.calculadora-agua {
   font-size: 18px;
   font-weight: bold;
   display: grid;
@@ -62,7 +55,7 @@ article {
   gap: 20px;
 }
 
-.calculadora-imc p {
+.calculadora-agua p {
   grid-column: 1 / 3;
   text-align: center;
   font-size: 20px;
@@ -85,10 +78,9 @@ input {
   padding: 10px 10px;
 }
 
-#button {
+#button-agua {
   max-width: 100%;
-
-  background-color: #276773;
+  background-color: #446ffc;
   color: #f2f2f2;
   padding: 15px 30px;
   grid-column: span 2;
@@ -96,61 +88,37 @@ input {
   justify-self: stretch;
 }
 
-table {
-  object-fit: cover;
-  background-color: #e5faf1;
-  border-radius: 3px;
-  text-align: center;
-  border: 1px solid black;
-  height: 100%;
-  font-size: 18px;
-  width: 100%;
-}
-
-table th,
-td {
-  border: 1px solid black;
-  padding: 0px 20px;
-}
-
 @media (max-width: 820px) {
-  article {
-    padding: 10px 0px;
-  }
-
-  .introducao {
+  .introducao-agua {
     grid-column: span 2;
   }
-  .introducao-2 {
-    display: flex;
-    flex-direction: column;
-
-    gap: 30px;
+  .introducao-agua-2 {
+    grid-column: span 2;
   }
 
-  .box-imc {
+  .box-agua {
     height: auto;
   }
 
-  .calculadora-imc {
+  .calculadora-agua {
     grid-template-columns: auto auto 1fr;
     padding: 30px;
   }
 
-  .calculadora-imc p,
+  .calculadora-agua p,
   label {
     font-size: 22px;
     text-align: start;
   }
-
-  #button {
+  #button-agua {
     grid-column: span 2;
   }
 }
 
+
 @media (max-width: 460px) {
-  .calculadora-imc {
-    #button {
+  .calculadora-agua {
+    #button-agua {
       margin-bottom: 50px;
     }
   }
