new page - dicas

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url(global.css);
 @import url(header.css);
-@import url(introducao.css);
-@import url(introducao-agua.css);
+@import url(1-main.css);
+@import url(2-main.css);
+@import url(contact.css);
+@import url(footer.css);
+@import url(dicas.css);
