--- a/css/1-main.css
+++ b/css/1-main.css
@@ -1,51 +1,59 @@
-.introducao-agua {
-  grid-column: 1;
-  padding: 10px 20px;
+main article {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+  margin: 0 auto;
+  gap: 50px;
 }
 
-.introducao-agua h1 {
+.introducao-1 {
+  grid-column: 1;
+  padding: 0px 20px;
+}
+
+.introducao-1 h1 {
   font-size: 30px;
   padding: 30px 0px;
   line-height: 1.3;
 }
 
-.introducao-agua p {
+.introducao-1 p {
   padding: 20px 0px;
   line-height: 1.3;
 }
 
-.introducao-agua a {
+.introducao-1 a {
   color: #effdf5;
-  background-color: #446ffc;
+  background-color: #276773;
   padding: 15px;
   border-radius: 10px;
 }
 
-.introducao-agua:hover {
+.introducao-1 a:hover {
   background-color: #f7fef9;
   color: #404040;
   transition: 0.3s;
 }
 
-.box-agua {
-  background-color: #d9e5fe;
+.introducao-1-1 {
+  grid-column: span 2;
+  display: flex;
+  padding: 0px 20px;
+
+  gap: 50px;
+}
+
+.box-imc {
+  background-color: #e5faf1;
   border-radius: 10px;
-  height: 100%;
+  height: 360px;
   width: 100%;
   display: flex;
   flex-direction: column;
   box-shadow: 1px 1px 1px 1px #96cec6;
-  object-fit: cover;
 }
 
-.introducao-agua-2 {
-  grid-column: 2;
-  display: flex;
-  padding: 10px 20px;
-  gap: 50px;
-}
-
-.calculadora-agua {
+.calculadora-imc {
   font-size: 18px;
   font-weight: bold;
   display: grid;
@@ -55,7 +63,7 @@
   gap: 20px;
 }
 
-.calculadora-agua p {
+.calculadora-imc p {
   grid-column: 1 / 3;
   text-align: center;
   font-size: 20px;
@@ -78,9 +86,10 @@ input {
   padding: 10px 10px;
 }
 
-#button-agua {
+#button {
   max-width: 100%;
-  background-color: #446ffc;
+
+  background-color: #276773;
   color: #f2f2f2;
   padding: 15px 30px;
   grid-column: span 2;
@@ -88,37 +97,60 @@ input {
   justify-self: stretch;
 }
 
+table {
+  object-fit: cover;
+  background-color: #e5faf1;
+  border-radius: 3px;
+  text-align: center;
+  border: 1px solid black;
+  height: 100%;
+  font-size: 18px;
+  width: 100%;
+}
+
+table th,
+td {
+  border: 1px solid black;
+}
+
 @media (max-width: 820px) {
-  .introducao-agua {
-    grid-column: span 2;
-  }
-  .introducao-agua-2 {
-    grid-column: span 2;
+  article {
+    padding: 10px 0px;
   }
 
-  .box-agua {
+  .introducao-1 {
+    grid-column: span 2;
+  }
+  .introducao-1-1 {
+    display: flex;
+    flex-direction: column;
+
+    gap: 30px;
+  }
+
+  .box-imc {
     height: auto;
   }
 
-  .calculadora-agua {
+  .calculadora-imc {
     grid-template-columns: auto auto 1fr;
     padding: 30px;
   }
 
-  .calculadora-agua p,
+  .calculadora-imc p,
   label {
     font-size: 22px;
     text-align: start;
   }
-  #button-agua {
+
+  #button {
     grid-column: span 2;
   }
 }
 
-
 @media (max-width: 460px) {
-  .calculadora-agua {
-    #button-agua {
+  .calculadora-imc {
+    #button {
       margin-bottom: 50px;
     }
   }
