--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,8 @@ body {
 h1,
 h2,
 h3,
-p {
+p,
+h4 {
   margin: 0px;
 }
 
@@ -29,3 +30,10 @@ a {
 article {
   padding: 40px 0px;
 }
+
+.logo {
+  margin: 0px 20px;
+  padding: 0px;
+}
+
+
