--- a/css/1-main.css
+++ b/css/1-main.css
@@ -113,7 +113,16 @@ td {
   border: 1px solid black;
 }
 
+.img-balance {
+  grid-column: 2;
+  justify-self: center;
+}
+
 @media (max-width: 820px) {
+  .img-balance {
+    display: none;
+  }
+
   article {
     padding: 10px 0px;
   }
