--- a/css/global.css
+++ b/css/global.css
@@ -33,7 +33,8 @@ article {
 
 .logo {
   margin: 0px 20px;
-  padding: 0px;
+  padding: 0px 10px;
+  justify-self: center;
+  font-weight: bolder;
+  font-size: 24px;
 }
-
-
